RESOLVED FIXED158278
[JSC] Some setters for components of Date do not timeClip() their result
https://bugs.webkit.org/show_bug.cgi?id=158278
Summary [JSC] Some setters for components of Date do not timeClip() their result
Benjamin Poulain
Reported 2016-06-01 15:20:32 PDT
[JSC] Some setters for components of Date do not timeClip() their result
Attachments
Patch (17.79 KB, patch)
2016-06-01 15:27 PDT, Benjamin Poulain
no flags
Archive of layout-test-results from ews116 for mac-yosemite (1.34 MB, application/zip)
2016-06-01 16:28 PDT, Build Bot
no flags
Patch (19.20 KB, patch)
2016-06-01 18:24 PDT, Benjamin Poulain
commit-queue: commit-queue-
Benjamin Poulain
Comment 1 2016-06-01 15:27:56 PDT
Geoffrey Garen
Comment 2 2016-06-01 15:39:53 PDT
Comment on attachment 280272 [details] Patch r=me
Build Bot
Comment 3 2016-06-01 16:28:25 PDT
Comment on attachment 280272 [details] Patch Attachment 280272 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1420107 New failing tests: js/date-timeClip-large-values.html
Build Bot
Comment 4 2016-06-01 16:28:30 PDT
Created attachment 280276 [details] Archive of layout-test-results from ews116 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-yosemite Platform: Mac OS X 10.10.5
Benjamin Poulain
Comment 5 2016-06-01 18:24:36 PDT
WebKit Commit Bot
Comment 6 2016-06-01 19:40:39 PDT
Comment on attachment 280289 [details] Patch Rejecting attachment 280289 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 280289, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Source/WTF/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://webkit-queues.webkit.org/results/1420871
Benjamin Poulain
Comment 7 2016-06-01 20:33:12 PDT
Note You need to log in before you can comment on or make changes to this bug.